# myFirstPyramid

./: app.py  pyproject.toml  tests.py  views.py
application/: app.py  models.py  tests.py  views.py
application/static/: 404.css  style.css
application/templates/: 404.html  delete.html  home.html  marklist.html  myform.html  showform.html
templates/: 404.html  home.jinja2  index.html
