[tool.poetry]
name = "mypyramid"
version = "0.1.0"
description = ""
authors = ["AlexanderZug <alexandertsygankov.unterwegs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pyramid = "^2.0.1"
pyramid-jinja2 = "^2.10"
WebTest = "^3.0.0"
SQLAlchemy = "^2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
